--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8" />
-	<title>Matrix 10</title>
+	<title>Artificial Neural Network</title>
 </head>
 <!--<body onload = create()>-->
 <body>
